melhoria no css

--- a/projeto-crud-php/tela-login/index.html
+++ b/projeto-crud-php/tela-login/index.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
+    <div class="topo"><h1>Asilo Arkham</h1></div>
+   <img src="icone.png">
     
-    <div id="Login">
+    <div class="Login">
         <h1>Login</h1>
         <input type="text" placeholder="nome">
         <br><br>
