pagina home e reformulação para asilo arkham.

--- a/projeto-crud-php/tela-login/index.html
+++ b/projeto-crud-php/tela-login/index.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-    <div class="topo"><h1>Asilo Arkham</h1></div>
-   <img src="icone.png">
+    <img src="logo.png" class="logo">
     
     <div class="Login">
         <h1>Login</h1>
